<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="title_activity_home">Home</string>

    <string name="Fname">First Name</string>
    <string name="Lname">Last Name</string>
    <string name="email">Email</string>
    <string name="phone">phone</string>
    <string name="passw">Password</string>

    <string name="UserName">username</string>
    <string name="layout_width">password</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="title_activity_signup">Sign up</string>
</resources>
